--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 </head>
 
 <body>
-  <header>Reezo Education</header>
+  <header id="pageTitle">Reezo Education</header>
+
 
   <div class="tabs">
     <div class="tab active" data-level="basic">Basic</div>
