--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
   <div class="tabs">
     <div class="tab active" data-level="basic">Basic</div>
-    <div class="tab" data-level="medium">Medium</div>
-    <div class="tab" data-level="advance">Advance</div>
+    <div class="tab" data-level="intermediate">Medium</div>
+    <div class="tab" data-level="advanced">Advance</div>
   </div>
 
   <div class="list" id="videoList"></div>
