--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="tab active" data-level="basic">Basic</div>
     <div class="tab" data-level="intermediate">Medium</div>
     <div class="tab" data-level="advanced">Advance</div>
-    <div class="tab" data-level="calculator">🧮 Calculator</div>
+    <div class="tab" data-level="calculator">📊 Risk Calculator</div>
   </div>
 
   <div class="list" id="videoList"></div>
