--- a/index.html
+++ b/index.html
@@ -122,16 +122,15 @@ Fokus XAUUSD sahaja.
 
 
 <script>
-const tg = window.Telegram.WebApp;
-
 function openLotCalculator() {
-  tg.openLink("https://telegram-miniapp-v45s.vercel.app/lot.html");
+  window.location.href = "lot.html";
 }
 
 function openMarginCalculator() {
-  tg.openLink("https://telegram-miniapp-v45s.vercel.app/risk.html");
+  window.location.href = "risk.html";
 }
 </script>
+
 
 
   <script>
