--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
       color: #aaa;
       white-space: pre-line;
     }
+    
+    <style>
+.open-btn {
+  background: #22c55e;
+  color: #000;
+  padding: 8px 12px;
+  border-radius: 8px;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+}
+</style>
+
   </style>
 </head>
 
