--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
 
 <div class="list" id="videoList"></div>
 
+<!-- 🔧 TAB CLICK HANDLER (FIX BUG B) -->
+<script>
+document.querySelectorAll(".tab").forEach(tab => {
+  tab.addEventListener("click", () => {
+    const level = tab.dataset.level;
+    if (!level) return;
+    window.location.href = `?level=${level}`;
+  });
+});
+</script>
+
 <script src="app.js"></script>
 </body>
 </html>
